2000-09-06  Joseph S. Myers  <jsm28@cam.ac.uk>

	* lib/.cvsignore: New file.
	* morse/.cvsignore: Add morse.

2000-08-22  Joseph S. Myers  <jsm28@cam.ac.uk>

	* hunt/hunt/.cvsignore, hunt/huntd/.cvsignore, mille/.cvsignore,
	monop/.cvsignore, morse/.cvsignore, number/.cvsignore,
	phantasia/.cvsignore, pig/.cvsignore, pom/.cvsignore,
	ppt/.cvsignore, primes/.cvsignore, quiz/.cvsignore,
	quiz/datfiles/.cvsignore, rain/.cvsignore, random/.cvsignore,
	robots/.cvsignore, rogue/.cvsignore, sail/.cvsignore,
	snake/snake/.cvsignore, snake/snscore/.cvsignore,
	tetris/.cvsignore, trek/.cvsignore, worm/.cvsignore,
	worms/.cvsignore, wtf/.cvsignore, wump/.cvsignore: New files.

2000-08-19  Joseph S. Myers  <jsm28@cam.ac.uk>

	* fortune/datfiles/.cvsignore, fortune/fortune/.cvsignore,
	fortune/strfile/.cvsignore, fortune/unstr/.cvsignore,
	gomoku/.cvsignore, hack/.cvsignore, hangman/.cvsignore: New files.

2000-08-18  Joseph S. Myers  <jsm28@cam.ac.uk>

	* caesar/.cvsignore, canfield/canfield/.cvsignore,
	canfield/cfscores/.cvsignore, cribbage/.cvsignore, dm/.cvsignore,
	factor/.cvsignore, fish/.cvsignore: New files.

	* fortune/datfiles/Makefile.bsd, fortune/datfiles/fortunes,
	fortune/datfiles/netbsd, fortune/datfiles/netbsd-o.fake,
	fortune/datfiles/netbsd-o.real, wtf/acronyms: Update from NetBSD
	CVS.

2000-08-05  Joseph S. Myers  <jsm28@cam.ac.uk>

	* .cvsignore, include/.cvsignore, adventure/.cvsignore,
	arithmetic/.cvsignore, atc/.cvsignore,
	backgammon/backgammon/.cvsignore,
	backgammon/common_source/.cvsignore,
	backgammon/teachgammon/.cvsignore, banner/.cvsignore,
	battlestar/.cvsignore, bcd/.cvsignore, boggle/boggle/.cvsignore,
	boggle/mkdict/.cvsignore, boggle/mkindex/.cvsignore: New files.

	* wtf/acronyms: Update from NetBSD CVS.

2000-08-04  Joseph S. Myers  <jsm28@cam.ac.uk>

	* include/signal.h, include/stdio.h, include/stdlib.h,
	include/termios.h, include/sys/cdefs.h, include/sys/ttydefaults.h:
	Use #pragma GCC system_header to allow #include_next with