@@ -1,0 +1,2 @@
+give
+quit
