@@ -1,0 +1,2 @@
+give, foo
+quit
