@@ -1,0 +1,7 @@
+b
+take robe
+b
+r
+d
+drop robe, shoot all
+quit
