@@ -1,0 +1,56 @@
+#!/bin/sh
+# tests/battlestar.test - test functionality of battlestar.
+#
+# Copyright (c) 2000 Joseph Samuel Myers.
+# All rights reserved.
+#
+# Redistribution and use in source and binary forms, with or without
+# modification, are permitted provided that the following conditions
+# are met:
+# 1. Redistributions of source code must retain the above copyright
+#    notice, this list of conditions and the following disclaimer.
+# 2. Redistributions in binary form must reproduce the above copyright
+#    notice, this list of conditions and the following disclaimer in the
+#    documentation and/or other materials provided with the distribution.
+# 3. The name of the author may not be used to endorse or promote products
+#    derived from this software without specific prior written permission.
+#
+# THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
+# IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
+# OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
+# IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT,
+# INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
+# BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
+# LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED
+# AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
+# OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY
+# OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
+# SUCH DAMAGE.
+
+set -e
+
+. tests/common
+
+testexec battlestar battlestar/battlestar
+
+# These tests cover various past bugs found in battlestar.
+
+testno 1
+battlestar/battlestar <tests/battlestar.in1 >test.out 2>&1 || failtest
+compare test.out tests/battlestar.out1
+rm -f test.out
+
+testno 2
+battlestar/battlestar <tests/battlestar.in2 >test.out 2>&1 || failtest
+compare test.out tests/battlestar.out2
+rm -f test.out
+
+testno 3
+battlestar/battlestar <tests/battlestar.in3 >test.out 2>&1 || failtest
+compare test.out tests/battlestar.out3
+rm -f test.out
+
+testno 4
+battlestar/battlestar <tests/battlestar.in4 >test.out 2>&1 || failtest
+compare test.out tests/battlestar.out4
+rm -f test.out
